--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="frontendmentor challenge">
+    <meta name="description" content="frontendmentor challenge" />
     <!-- displays site properly based on user's device -->
     <link
       rel="icon"
@@ -30,11 +30,51 @@
           is appreciated to help us improve our offering!
         </div>
         <div class="card--rate">
-          <div class="active rate" id="rate-1" role="button" aria-pressed="false" onclick="rated('rate-1')">1</div>
-          <div class="rate" id="rate-2" role="button" aria-pressed="false" onclick="rated('rate-2')">2</div>
-          <div class="rate" id="rate-3" role="button" aria-pressed="false" onclick="rated('rate-3')">3</div>
-          <div class="rate" id="rate-4" role="button" aria-pressed="false" onclick="rated('rate-4')">4</div>
-          <div class="rate" id="rate-5" role="button" aria-pressed="false" onclick="rated('rate-5')">5</div>
+          <div
+            class="active rate"
+            id="rate-1"
+            role="button"
+            aria-pressed="false"
+            onclick="rated('rate-1')"
+          >
+            1
+          </div>
+          <div
+            class="rate"
+            id="rate-2"
+            role="button"
+            aria-pressed="false"
+            onclick="rated('rate-2')"
+          >
+            2
+          </div>
+          <div
+            class="rate"
+            id="rate-3"
+            role="button"
+            aria-pressed="false"
+            onclick="rated('rate-3')"
+          >
+            3
+          </div>
+          <div
+            class="rate"
+            id="rate-4"
+            role="button"
+            aria-pressed="false"
+            onclick="rated('rate-4')"
+          >
+            4
+          </div>
+          <div
+            class="rate"
+            id="rate-5"
+            role="button"
+            aria-pressed="false"
+            onclick="rated('rate-5')"
+          >
+            5
+          </div>
         </div>
         <button class="card--submit">Submit</button>
       </div>
@@ -55,13 +95,5 @@
         </p>
       </div>
     </main>
-
-    <!-- footer section -->
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://github.com/AbdallaRahmah">Ben Rahmah</a>.
-    </div>
   </body>
 </html>
