--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="frontendmentor challenge" />
-    <!-- displays site properly based on user's device -->
+    <meta name="description" content="frontend mentor challenge" />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <title>Frontend Mentor | Interactive rating component</title>
+    <title>Interactive rating component</title>
     <link rel="stylesheet" href="styles/main.css" />
     <script src="scripts/index.js" defer></script>
   </head>
